Add the model training and vizualization algorithms.

--- a/templates/index.html
+++ b/templates/index.html
@@ -225,6 +225,8 @@
             </div>
             <input type="submit" class="btn btnStart" name="submit_button" value="Start the Training" />
         </form>
+        <p>{{ name }}</p>
+        <img src={{ url}} alt="Chart" height="42" width="42">
 
 
     </body>
