Add visualization charts.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -90,7 +90,7 @@
     <body>
         <div class="navbar">
             <h1>IR % SE Project</h1>
-            <a href="/data">Visualization</a>
+            <a href="/visualize">Visualization</a>
             <a href="/train">Training</a>
             <a href="/contact">Contact</a>
         </div>
