--- a/templates/index.html
+++ b/templates/index.html
@@ -183,7 +183,7 @@
         <div class="navbar">
             <h1>IR % SE Project</h1>
             <a href="/visualize">Visualization</a>
-            <a href="/train">Training</a>
+            <a href="/">Training</a>
             <a href="/contact">Contact</a>
         </div>
 
