--- a/templates/train_results.html
+++ b/templates/train_results.html
@@ -95,7 +95,7 @@
         margin-block-start: 100px;
         text-align: center;
         position: absolute;
-        top: 20%;
+        top: 10%;
         left: 20%;
     }
     .model-name{
@@ -105,6 +105,13 @@
         align-items: center;
         text-align: center;
 
+    }
+    .confusion-matrix{
+        position: absolute;
+        top: 45%;
+        left: 35%;
+        align-items: center;
+        text-align: center;
     }
     
 
@@ -116,7 +123,7 @@
             <a href="/">Training</a>
             <a href="/contact">Contact</a>
         </div>
-        <h1 class="model-name"> Train/Test Results for the model: {{ model_name }}</h1>
+        <h1 class="model-name"> Train/Test Results for the {{ model_name }}</h1>
         <table class= "results-table">
             <tr>
               <th>Metric</th>
@@ -144,4 +151,8 @@
               <td>{{ test_f1 }}%</td>
             </tr>
           </table>
+          <br> <br>
+          <div class="confusion-matrix">
+            <img src="{{ confusion_matrix }}" alt="Confusion Matrix" width="450" height="350">
+        </div>
 </body>          
