--- a/templates/contact.html
+++ b/templates/contact.html
@@ -34,13 +34,13 @@
 
     .contactDiv {
         background-color: #617D72;    
-        position: absolute;
-        margin-block-start: 100px;
-        margin-inline-start: 100px;
+        position:absolute;
+        text-align: center;
+        margin-block-start: 7.5%;
+        margin-inline-start: 10%;
         width: 80%;
         height: 80%;
         border-radius: 2%;
-        
     }
 
     .member_div {
