--- a/templates/index.html
+++ b/templates/index.html
@@ -192,23 +192,23 @@
             <div class="myDiv">
                 <h1><b>Models</b></h1>
                 <label class="container">Neural Network
-                    <input type="checkbox" name="model_names" value="NN">
+                    <input type="checkbox" class="radio" name="model_names" value="NN">
                     <span class="checkmark"></span>
                 </label>
                 <label class="container">Decision Tree
-                    <input type="checkbox" name="model_names" value="DT">
+                    <input type="checkbox" class="radio" name="model_names" value="DT">
                     <span class="checkmark"></span>
                 </label>
                 <label class="container">Random Forest
-                    <input type="checkbox" name="model_names" value="RF">
+                    <input type="checkbox" class="radio" name="model_names" value="RF">
                     <span class="checkmark"></span>
                 </label>
                 <label class="container">Naive Bayes
-                    <input type="checkbox" name="model_names" value="NB">
+                    <input type="checkbox" class="radio" name="model_names" value="NB">
                     <span class="checkmark"></span>
                 </label>
                 <label class="container">Support Vector Machine
-                    <input type="checkbox" name="model_names" value="SVM">
+                    <input type="checkbox" class="radio" name="model_names" value="SVM">
                     <span class="checkmark"></span>
                 </label>
                 
@@ -220,8 +220,7 @@
                 <label for="tr_size"><b>Train-set Size:  % </b></label>
                 <input class="inputTrainSize" type="number" id="tr_size" name="tr_size" min="60" max="90" step="10"><br>
                 
-                <label for="n_epoch"><b>Number of Epochs: </b></label>
-                <input class="inputEpoch" type="number" id="n_epoch" name="n_epoch" min="1" max="5"><br>
+                
             </div>
             <input type="submit" class="btn btnStart" name="submit_button" value="Start the Training" />
         </form>
