--- a/templates/contact.html
+++ b/templates/contact.html
@@ -89,7 +89,7 @@
     </style>
     <body>
         <div class="navbar">
-            <h1>IR % SE Project</h1>
+            <h1>ClickStream Data Project</h1>
             <a href="/visualize">Visualization</a>
             <a href="/">Training</a>
             <a href="/contact">Contact</a>
