--- a/templates/train_results.html
+++ b/templates/train_results.html
@@ -26,6 +26,18 @@
         margin-inline-start: 20px;
         margin-block-start: 50px;
     }
+    tr{
+        background-color: #f2f2f2;
+        border: 1px solid;
+    }
+    th{
+        background-color: #80d8e0;
+        border: 1px solid;
+    }
+
+    td{
+        border: 1px solid;
+    }
     label, button {
         font-family:'Trebuchet MS';
         font-style:normal;
@@ -118,7 +130,7 @@
     </style>
     <body>
         <div class="navbar">
-            <h1>IR % SE Project</h1>
+            <h1>ClickStream Data Project</h1>
             <a href="/visualize">Visualization</a>
             <a href="/">Training</a>
             <a href="/contact">Contact</a>
